--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,26 +2,26 @@ name: ucare
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
+environment:
   sdk: '>=2.17.6 <3.0.0'
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
-  get_cli: ^1.8.1
+  faker: ^2.0.0
+  flutter:
+    sdk: flutter
   get: 4.6.5
-  flutter: 
-    sdk: flutter
+  get_cli: ^1.8.1
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   assets:
     - assets/
     - assets/button/
     - assets/barang/
     - assets/bg.png
   uses-material-design: true
-
